<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Citizen</string>
    <string name="language_english">English</string>
    <string name="language_sinhala">සිංහල</string>
    <string name="language_tamil">தமிழ்</string>
    <string name="select_your_language_preference">Select your language preference</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_activity_name">MuniciPal - Register</string>
    <string name="password">Password</string>
    <string name="phone_number_hint">Eg: 0712345678</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="landing_page_message_admin">You may view issues assigned to you, or view issues reported in the area.</string>
    <string name="landing_page_message_user">We are facilitating to engage with your local authority, public service officers, local council members and local political leaders through this app.</string>
    <string name="view_issues_reported">View issues reported</string>
    <string name="issues_assigned_to_me">Issues assigned to me</string>
    <string name="my_reported_issues">My reported issues</string>
    <string name="report_new_issue">Report new issue</string>
    <string name="description">Description</string>
    <string name="report">Report</string>
    <string name="no_location_detected">No location detected. Please add Directions to the location.</string>
    <string name="user_name_or_password_incorrect">Phone Number or Password Incorrect!</string>
    <string name="filter">Filter</string>
    <string name="ok">OK</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="if_you_wish_to_change_the_password_enter_the_old_password_and_new_password_and_click_change_password">If you wish to change the password, Enter the old password and new password and click Change Password</string>
    <string name="change_password">Change Password</string>
    <string name="go_back">Go Back</string>
    <string name="name_with_colon">Name:</string>
    <string name="role_with_colon">Role:</string>
    <string name="verify_number">Verify Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="assign_to_me">Assign to Me</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="resolve">Resolve</string>
    <string name="new_password_does_not_match_confirm_password">New password does not match with Confirm password</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="password_updated_successfully">Password updated Successfully</string>
    <string name="please_put_down_a_description">Please put down a description</string>
    <string name="phone_number_or_password_incorrect">Phone Number or password incorrect</string>
    <string name="please_attach_an_image">Please Attach an Image</string>
    <string name="otp_sent_to_ur_number">OTP sent to your Number</string>
    <string name="number_verification_failed_try_again">Phone Number Verification Failed, try again later</string>
    <string name="reporting_is_successful">Issue reported successfully.</string>
    <string name="error_occurred_try_again">Error Occurred, Try again</string>
    <string name="location_data_not_found">Location data not found</string>
    <string name="all_reported_issues">All Reported issues</string>
    <string name="welcome_name">Welcome </string>
    <string name="mark_as_resolved">Resolve Issue</string>
    <string name="mark_as_rejected">Reject Issue</string>
    <string name="mark_as_resolved_successfully">Resolved Successfully</string>
    <string name="mark_as_rejected_successfully">Rejected Successfully</string>
    <string name="go_to_location">Go to location</string>
    <string name="failed_to_resolve_try_again">Failed To Resolve, Try again</string>
    <string name="failed_to_reject_try_again">Failed To Reject, Try again</string>
    <string name="failed_to_assign_try_again">Failed To Assign, Try again</string>
    <string name="adapter_assignee">Assignee: </string>
    <string name="area_unknown">Area Unknown</string>
    <string name="department_unknown">Authority Unknown</string>
    <string name="permissions_not_granted">Permissions not Granted</string>
    <string name="directions">Directions</string>
    <string name="add_direction_to_proceed">Please add Directions to Proceed</string>
    <string name="issue_description">Issue description</string>
    <string name="resolve_message">Resolve message</string>
    <string name="directions_tv">Directions:</string>
    <string name="description_tv">Description:</string>
    <string name="address_to">Address To:</string>
    <string name="area_tv">Area:</string>
    <string name="status_tv">Status:</string>
    <string name="created_on">Created On:</string>
    <string name="issue_id_tv">Issue Id:</string>
    <string name="resolution">Issue Resolution</string>
    <string name="resolution_label">Resolution:</string>
    <string name="assigned_successfully">Assigned Successfully</string>
    <string name="assigned_to_admin">Assigned To</string>
    <string name="you_have_not_selected_any_issues">You have not selected any issues</string>
    <string name="please_select_admin_user">Please Select Admin user</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="save_new_password">Save New Password</string>
    <string name="verify">Verify</string>
    <string name="note_you_can_only_use_this_service_once_a_day">Note: You can only use this service once a day</string>
    <string name="please_enter_your_10_digits_phone_number_to_proceed">Please Enter Your 10 digits Phone number to proceed</string>
    <string name="otp">OTP</string>
    <string name="phone_number_verification_failed_try_again">Phone Number Verification Failed, try again later</string>
    <string name="you_are_allowed_to_change_password_once_a_day">You are allowed to change the password once per day.</string>
    <string name="passwords_are_empty_or_not_matched">Passwords are empty or Not matched</string>
    <string name="internal_error_occurred_try_again_later">Internal Error Occurred, Please Try again Later</string>
    <string name="new_password_added_successfully">New Password Added successfully</string>
    <string name="select_area">Select Area</string>
    <string name="select_department">Select Department</string>
    <string name="select_status">Select Status</string>

    <string-array name="languages">
        <item>Select Language</item>
        <item>සිංහල</item>
        <item>தமிழ்</item>
        <item>English</item>
    </string-array>
</resources>